--- a/Project/Project 1/Project 1/Base.lproj/Main.storyboard
+++ b/Project/Project 1/Project 1/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,27 +16,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nEM-fH-gOI">
+                                <rect key="frame" x="294" y="54" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="XxJ-i5-zQu"/>
+                                </constraints>
+                                <state key="normal" title="Connections"/>
+                                <connections>
+                                    <action selector="onConnectionsTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9Hf-gV-JK0"/>
+                                </connections>
+                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="teL-Jh-2p9">
-                                <rect key="frame" x="20" y="65" width="374" height="267"/>
+                                <rect key="frame" x="20" y="84" width="374" height="267"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="267" id="9nW-eX-oda"/>
                                 </constraints>
                             </imageView>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9yZ-Lf-xA3">
-                                <rect key="frame" x="20" y="355" width="374" height="405"/>
+                                <rect key="frame" x="20" y="374" width="374" height="405"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="405" id="CJO-7N-4aj"/>
                                 </constraints>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dl9-ff-gUx">
-                                <rect key="frame" x="20" y="328" width="233" height="30"/>
+                                <rect key="frame" x="20" y="347" width="233" height="30"/>
                                 <state key="normal" title="View Search Area"/>
                                 <connections>
                                     <action selector="tapViewSearchAreaButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GyR-uY-TQ9"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ddx-4E-MeS">
-                                <rect key="frame" x="20" y="355" width="374" height="507"/>
+                                <rect key="frame" x="20" y="374" width="374" height="488"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="kcd-p6-n9x">
@@ -57,23 +67,26 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="nEM-fH-gOI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="0he-Er-lET"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="teL-Jh-2p9" secondAttribute="trailing" constant="20" id="9nG-x8-iHz"/>
                             <constraint firstItem="Ddx-4E-MeS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="9vF-pp-EhK"/>
                             <constraint firstItem="9yZ-Lf-xA3" firstAttribute="top" secondItem="Dl9-ff-gUx" secondAttribute="bottom" constant="-3" id="Brx-1I-eFb"/>
                             <constraint firstItem="9yZ-Lf-xA3" firstAttribute="top" secondItem="Dl9-ff-gUx" secondAttribute="bottom" constant="-3" id="Dtl-Hc-J8R"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nEM-fH-gOI" secondAttribute="trailing" constant="20" id="H20-B6-NlI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Dl9-ff-gUx" secondAttribute="trailing" constant="161" id="JyM-qw-OFN"/>
                             <constraint firstItem="Ddx-4E-MeS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Pdd-Fh-shT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9yZ-Lf-xA3" secondAttribute="trailing" constant="20" id="TzD-BX-ckn"/>
-                            <constraint firstItem="teL-Jh-2p9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="21" id="YaP-JV-ieP"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9yZ-Lf-xA3" secondAttribute="bottom" constant="102" id="a9d-e1-AbR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9yZ-Lf-xA3" secondAttribute="bottom" constant="83" id="a9d-e1-AbR"/>
                             <constraint firstItem="Dl9-ff-gUx" firstAttribute="top" secondItem="teL-Jh-2p9" secondAttribute="bottom" constant="-4" id="cAg-SW-QlL"/>
+                            <constraint firstItem="teL-Jh-2p9" firstAttribute="top" secondItem="nEM-fH-gOI" secondAttribute="bottom" id="dyK-7z-teZ"/>
                             <constraint firstItem="Dl9-ff-gUx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="g7w-NH-cup"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ddx-4E-MeS" secondAttribute="trailing" constant="20" id="imx-b4-aDK"/>
                             <constraint firstItem="teL-Jh-2p9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="mpW-hh-dfu"/>
-                            <constraint firstItem="Ddx-4E-MeS" firstAttribute="bottom" secondItem="9yZ-Lf-xA3" secondAttribute="bottom" constant="102" id="owo-i4-3Mn"/>
+                            <constraint firstItem="Ddx-4E-MeS" firstAttribute="bottom" secondItem="9yZ-Lf-xA3" secondAttribute="bottom" constant="83" id="owo-i4-3Mn"/>
                             <constraint firstItem="9yZ-Lf-xA3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="s8d-8J-uRi"/>
                             <constraint firstItem="Dl9-ff-gUx" firstAttribute="top" secondItem="teL-Jh-2p9" secondAttribute="bottom" constant="-4" id="tnb-eM-eJU"/>
                             <constraint firstItem="Ddx-4E-MeS" firstAttribute="top" secondItem="Dl9-ff-gUx" secondAttribute="bottom" constant="-3" id="uuI-fR-BKN"/>
+                            <constraint firstItem="nEM-fH-gOI" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="298" id="xYU-9s-4qD"/>
                         </constraints>
                     </view>
                     <connections>
@@ -82,11 +95,42 @@
                         <outlet property="mapView" destination="9yZ-Lf-xA3" id="3RF-R9-aXm"/>
                         <outlet property="profileDataTableView" destination="Ddx-4E-MeS" id="qf1-aS-ZBM"/>
                         <outlet property="viewSearchAreaButton" destination="Dl9-ff-gUx" id="J4T-lc-Gem"/>
+                        <segue destination="i6W-H5-XcL" kind="presentation" identifier="ConnectionsSegue" id="mON-kw-ecR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="18.840579710144929" y="78.348214285714278"/>
+        </scene>
+        <!--Connection View Controller-->
+        <scene sceneID="zn8-wg-Z6h">
+            <objects>
+                <viewController id="i6W-H5-XcL" customClass="ConnectionViewController" customModule="Project_1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Xop-kc-KUA">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feature comming soon!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l5C-6O-uGp">
+                                <rect key="frame" x="126" y="341" width="138" height="77"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="s3L-lQ-hqe"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="l5C-6O-uGp" firstAttribute="top" relation="lessThanOrEqual" secondItem="s3L-lQ-hqe" secondAttribute="top" constant="341" id="GSh-l5-Uqk"/>
+                            <constraint firstItem="s3L-lQ-hqe" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="l5C-6O-uGp" secondAttribute="bottom" constant="390" id="Y3G-fA-NJ0"/>
+                            <constraint firstItem="l5C-6O-uGp" firstAttribute="leading" secondItem="s3L-lQ-hqe" secondAttribute="leading" constant="126" id="edn-xR-mNb"/>
+                            <constraint firstItem="s3L-lQ-hqe" firstAttribute="trailing" secondItem="l5C-6O-uGp" secondAttribute="trailing" constant="150" id="lCA-BV-pMq"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="zB0-IY-KNw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="INS-EQ-ALS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="750.72463768115949" y="77.678571428571431"/>
         </scene>
     </scenes>
     <resources>
